# sentiment-analysis

./: .gitignore  README.md  pyproject.toml
backend/ml/: config.py  data.py  models.py  trainer.py
