[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Burak K.",email = "burakkilnnc@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "mediapipe (>=0.10.35,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
