[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Burak K.",email = "burakkilnnc@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "mediapipe (>=0.10.35,<0.11.0)",
    "torch (>=2.12.1,<3.0.0)",
    "torchvision (>=0.27.1,<0.28.0)"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
